--- a/graphieros_journal/graphieros_journal.html
+++ b/graphieros_journal/graphieros_journal.html
@@ -63,7 +63,7 @@
         import { linear, fractal, molecular, callifractal } from '../graphieros0.2.js';
 
         let svg_title = {
-            sect: 'svg_title',
+            section: 'svg_title',
             sequence: 'ws-sx-xw-wz-ze-ex zx-ws-qe-ez-zq-qw-wx-xd-ds-sw ze-qs-wx qw-wz-sx-xe zq-qw-ws-sx-xd-de',
             colors: [65, 95, 153],
             size: 35,
@@ -95,7 +95,7 @@
         linear({ ...linear_1 });
 
         let fractal_1 = {
-            sect: 'fractal_1',
+            section: 'fractal_1',
             sequence: 'wq-qz-ze-ed-dx-xw-we-zx-qd zw-qs-ed-dx',
             colors: [100, 100, 100],
             size: 35,
