--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <script type="module">
             import { linear, fractal, molecular, callifractal } from './graphieros0.2.js';
             let BIOGLYPH = {
-                sect: 'bioGlyph',
+                section: 'bioGlyph',
                 sequence: 'we-xs-dz-wq-qz-ze-ed-dx-xw zx-ws-qe ze-eq-xw-wd',
                 size: 40,
                 radius: '',
