--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -21,9 +21,6 @@
     <div class="linear_sequence">ka-tsi ma-tsi kli-nia-vi-kea-tsi</div>
     <div class="linear_sequence">ka-fy-go hi-v3ai-hia vi-keo</div>
 
-    <!--molecular: use true phonology, just separate with spaces. 7 glyphs max-->
-    <div id="molecular_sequence">sro kfa du srei ktu foi ksi</div>
-
 
     <!--function calls-->
 
@@ -72,7 +69,7 @@
 
         //calligraphic parameters
         let calli_0 = {
-            sect: 'CALLIFRACTAL',
+            section: 'CALLIFRACTAL',
             sequence: "we-xs-xw-wq-qz-ze-ed-dx-zd zx-ws-qe ze-eq-xw-wd",
             size: 40,
             radius: '',
