--- a/graphieros_journal/graphieros_journal.html
+++ b/graphieros_journal/graphieros_journal.html
@@ -80,7 +80,7 @@
             section: 'linear_0',
             container: 'l_0',
             size: 30,
-            color: [255, 255, 255],
+            colors: [255, 255, 255],
         }
 
         linear({ ...linear_0 });
@@ -89,7 +89,7 @@
             section: 'linear_1',
             container: 'l_1',
             size: 30,
-            color: [255, 99, 71],
+            colors: [255, 99, 71],
         }
 
         linear({ ...linear_1 });
