--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 section: 'gp',
                 container: 'p0',
                 size: 30,
-                color: [100,149,237],
+                colors: [100,149,237],
             }
 
             linear({...linear_p0});
