basic homepage design done

--- a/logo/logo.html
+++ b/logo/logo.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphieros stickers</title>
+    <title>G stix luxury stickers</title>
     <link rel="stylesheet" href="logo.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <script type="module" src="../graphieros0.2.js"></script>
 </head>
 
@@ -21,9 +22,19 @@
             <span class="header_logo">G<span>stix</span><br><span id="motto">luxury stickers</span></span>            
         </header>
 
-        <section class="gallery" id="gallery">
-        </section>
+        <section class="gallery" id="gallery_0"></section>
+        <img class="background_img" src="stix_laptop_0.png">
 
+        <section class="gallery" id="gallery_1"></section>
+        <img class="background_img" src="stix_laptop_1.png">
+
+        <section class="gallery" id="gallery_2"></section>
+        <img class="background_img" src="stix_laptop_2.png">
+
+        <section class="gallery" id="gallery_3"></section>
+        <img class="background_img" src="stix_laptop_3.png">
+
+        <footer><b>G stix</b> <span>design by</span> <a target="_blank"  href="https://graphieros.com">Alec Lloyd Porbert</a></footer>
     </section>
 
     <script type="module" src="logo.js"></script>
