adding modal window on sitx click

--- a/logo/logo.html
+++ b/logo/logo.html
@@ -22,22 +22,35 @@
             <span class="header_logo">G<span>stix</span><br><span id="motto">luxury stickers</span></span>            
         </header>
 
+        <div class="category" id="category_0">executive collection</div>
         <section class="gallery" id="gallery_0"></section>
         <img class="background_img" src="stix_laptop_0.png">
 
+        <div class="category" id="category_1">green collection</div>
         <section class="gallery" id="gallery_1"></section>
         <img class="background_img" src="stix_laptop_1.png">
 
+        <div class="category" id="category_2">bronze collection</div>
         <section class="gallery" id="gallery_2"></section>
         <img class="background_img" src="stix_laptop_2.png">
 
+        <div class="category" id="category_3">turbo collection</div>
         <section class="gallery" id="gallery_3"></section>
         <img class="background_img" src="stix_laptop_3.png">
+
+        <section class="showcase" id="showcase_0">
+            <div id="standard_laptop_container">
+                <img src="standard_laptop.png">
+                <div id="standard_laptop_sticker_container"></div>
+                <div id="quit_modal"></div>
+            </div>
+        </section>
 
         <footer><b>G stix</b> <span>design by</span> <a target="_blank"  href="https://graphieros.com">Alec Lloyd Porbert</a></footer>
     </section>
 
     <script type="module" src="logo.js"></script>
+    <script type="module" src="events.js"></script>
 </body>
 
 </html>
