modal window done

--- a/logo/logo.html
+++ b/logo/logo.html
@@ -38,15 +38,17 @@
         <section class="gallery" id="gallery_3"></section>
         <img class="background_img" src="stix_laptop_3.png">
 
-        <section class="showcase" id="showcase_0">
-            <div id="standard_laptop_container">
-                <img src="standard_laptop.png">
-                <div id="standard_laptop_sticker_container"></div>
-                <div id="quit_modal"></div>
-            </div>
-        </section>
-
         <footer><b>G stix</b> <span>design by</span> <a target="_blank"  href="https://graphieros.com">Alec Lloyd Porbert</a></footer>
+    </section>
+
+    <section class="showcase" id="showcase_0">
+        <div id="standard_laptop_container">
+            <img src="standard_laptop.png">
+            <div id="standard_laptop_sticker_container"></div>
+            <div id="sticker_name_display"></div>
+            <div id="buy">I want this!</div>
+            <div id="quit_modal"></div>
+        </div>
     </section>
 
     <script type="module" src="logo.js"></script>
