--- a/reactversion/source/public/index.html
+++ b/reactversion/source/public/index.html
@@ -14,7 +14,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Artiste, data & business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres, applications..." />
+    <meta name="google-site-verification" content="3M0g0CGwhq36_jRupfc2k3hDyDAWmfFAAItyW-b9IjM" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Monoton&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
