--- a/reactversion/source3/public/index.html
+++ b/reactversion/source3/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Artiste, data & business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres, applications..." />
+  <meta name="description" content="Le site officiel du graphieros. Toutes les ressources pour comprendre la langue hexagonale." />
     <meta name="google-site-verification" content="3M0g0CGwhq36_jRupfc2k3hDyDAWmfFAAItyW-b9IjM" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Monoton&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Alec Lloyd Probert</title>
+  <title>Graphieros</title>
 </head>
 
 <body>
