--- a/reactversion/source3/public/index.html
+++ b/reactversion/source3/public/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Mr+Dafoe&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Nova+Mono&display=swap" rel="stylesheet">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
